# oreilly_live_training_getting_started_with_langchain

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  anki-cards-rag-with-pdf-langchain.txt  basic-diagrams.excalidraw  course_summary.md  oreilly_live_training_getting_started_with_langchain-cheatsheet-print.html  oreilly_live_training_getting_started_with_langchain-cheatsheet.html
data/: timesheet_data.csv  todo_data.csv
notebooks/: 1.0-intro-to-langchain.ipynb  1.0-langchain-fundamentals.ipynb  1.1-intro-to-runnable-interface.ipynb  1.1-langchain-app-dev-structure.ipynb  1.1-langchain-app.py  1.1-prompt-templates.ipynb  1.1-tools-and-memory.ipynb  1.2-advanced-patterns.ipynb  1.2-messages-deep-dive.ipynb  1.3-streaming-patterns.ipynb  2.0-LCEL-interface-composing-chains.ipynb  2.0-composing-chain-pipelines-with-langchain.ipynb  2.0-modern-rag-langchain.ipynb  2.0-qa-with-langchain.ipynb  2.0-rag-with-langchain.ipynb  2.0-simple-rag-langchain-langgraph.ipynb  2.1-LCEL-interface.ipynb  2.1-langchain-openai-functions-runnables-with-tools.ipynb  2.1-langchain-query-csv.ipynb  2.1-live-demo.ipynb  2.2-dynamic-quiz-over-pdf.ipynb  2.2-dynamic-quiz-over-pdf.py  2.2-langchain-openai-functions-runnables-with-tools.ipynb  2.2-langchain-pydantic-openai.ipynb  2.2-live-demo.ipynb  2.2-runnable-protocol.ipynb  2.2-tool-calling.ipynb  2.3-demos-adept-example.ipynb  2.3-langchain-pydantic-openai.ipynb  2.3-learning-chain-adept-example.ipynb  (+75 more)
notebooks/langchain-app-test/: README.md  pyproject.toml
notebooks/langchain-app-test/i-shall-persist/: chroma.sqlite3
(+39 files in other folders)
